2012-1-28 - Panorama post type was added.