@@ -1,1 +1,2 @@
+2013-4-26 - Added tumblr reblog/customize button docs.
 2012-1-28 - Panorama post type was added.
